--- a/style.css
+++ b/style.css
@@ -1,25 +1,39 @@
 h1{
     cursor: pointer;
-    color: blue;
+    color: rgb(255, 153, 0);
     font-size: 48px;
 }
 p{
     white-space: unset;
-    color: red;
+    color: rgb(255, 153, 0);
     font-size: 25px;
     
 }
 header{
     width: 100%;
-    background: #d9a7c7;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #fffcdc, #d9a7c7);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #fffcdc, #d9a7c7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    
+    
+    
+    
+
+    
+    
+    
+
+
 ;
 }
 body{
     width: 100%;
-    background: #D3CCE3;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #E9E4F0, #D3CCE3);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #E9E4F0, #D3CCE3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background:whitesmoke ;
+    background-image: url(https://i.imgur.com/U8bSjj5.jpg);
+    position: fixed;
+    background-size: 100%
     
 }
+img{margin: 1% 0%;}
+a{
+    color: red;
+}
+
