--- a/style.css
+++ b/style.css
@@ -375,7 +375,7 @@ html{
 
 header{
     width: 100%;
-    background:#EEEFF1;
+    background:#dfc0ee;
     position:fixed;
     left:0;
     top:0;
@@ -386,13 +386,12 @@ header{
 }
 .header_wrapper{
     display: flex;
-    justify-content:space-between ;
-    padding: 0 25px;
+    justify-content: space-between ;
+
 }
 body{
     width: 100%;
-    background-color:#EEEFF1;
-
+    background-color:#dfc0ee;
 }
 .header_logo {
 margin-top:57px;
@@ -404,7 +403,7 @@ line-height: 60px;
 position: relative;
 text-align: center;
 
-color: #34547A;
+color: #520386;
 cursor: pointer;
 }
 .header_logo::before {
@@ -415,7 +414,7 @@ cursor: pointer;
     width: 12px;
     height: 12px;
     border-radius: 5px;
-    background-color:#34546a;
+    background-color:#52038680;
     animation: updown 1.5s infinite;
     transition: 500ms;
 
@@ -444,6 +443,7 @@ cursor: pointer;
 }
 .header_menu{
     margin-top:79px;
+    margin-left:157px;
 font-family: Roboto;
 font-style: normal;
 font-weight: normal;
@@ -484,7 +484,7 @@ color: #727272;
     
 }
 .intro_left{
-    width:357px;
+    width:800px;
     padding-top:50px;
 
 }
@@ -510,7 +510,7 @@ color: #727272;
     letter-spacing: 0.1em;
 
     color: #FFFFFF;
-    background: #34547A;
+    background: #6c347a;
     margin-top: 60px;
     transition: 500ms;
 
@@ -542,7 +542,7 @@ margin-bottom: 100px;
 
 }
 .about{
-    background:white ;
+    background:rgb(242, 217, 248);
    
 }
 .wrapper{
@@ -569,7 +569,7 @@ margin-bottom: 100px;
 
 }
 .projects{
-    background: #34547A;
+    background: #6a347a;
 }
 .skills_wrapper{
     display: flex;
@@ -678,7 +678,7 @@ margin-bottom: 100px;
     }
 
     .skills{
-        background-color:white;
+        background-color:rgb(242, 217, 248);
     }
     .skill_2{
         position: relative;
@@ -766,7 +766,7 @@ margin-bottom: 100px;
       text-align: center;
   }
    .process{
-       background-color: #EEEFF1;
+       background-color: #dfc0ee;
    }
    .process_video{
        width: 500px;
@@ -831,12 +831,12 @@ margin-bottom: 100px;
        font-size: 14px;
        line-height: 23px;
        color:#5f5d5d;
-       background-color: white;
+       background-color: rgb(242, 217, 248);
        border: 0;
        padding:17px 20px;
    }
    .send{
-       background-color:#EEEFF1;
+       background-color:rgb(242, 217, 248);
    }
    .form3{
     width: 540px;
@@ -848,7 +848,7 @@ margin-bottom: 100px;
    .send_button{
     width: 190px;
     height: 55px;
-    background: #34547A;
+    background: #9708aa;
     border: 0;
     font-family: Roboto;
     font-style: normal;
@@ -858,18 +858,16 @@ margin-bottom: 100px;
     text-align: center;
     letter-spacing: 0.15em;
 
-    color: #FFFFFF;
+    color: rgb(239, 161, 255);
     margin-bottom: 100px;
    }
    .gallery{
        display: flex;
        flex-direction: column;
-       
    }
    .gallery_str{
        display: flex;
        width: 100%;
-      
 
    }
    .gallery_img {
@@ -888,7 +886,7 @@ margin-bottom: 100px;
       top:0;
       width:100%;
       height:100%;
-      background:rgba(58, 16, 245, 0.377);
+      background:rgba(218, 16, 245, 0.377);
       z-index: 3;
    
      
@@ -896,7 +894,7 @@ margin-bottom: 100px;
    .modal_content{
     padding: 20px;
     margin: 7% auto;
-    background-color: #EEEFF1;
+    background-color: rgb(191, 139, 255);
     width: 70%;
     transition-property:opacity ;
     transition-duration:2s ;
@@ -906,7 +904,7 @@ margin-bottom: 100px;
    .close{
        font-family: Revalia;
        font-size: 48px;
-       color: #34547A;
+       color: #ce1919;
        cursor: pointer;
        float: right;
    }
@@ -935,43 +933,8 @@ margin-bottom: 100px;
     text-align: center;
     letter-spacing: 0.15em;
 
-    color: #FFFFFF;
+    color: #de91e5;
     margin-bottom: 40px;
-}
-footer{
-    background: #34547A;
-}
-.footer_wrapper{
-    display: flex;
-    justify-content: space-between;
-    padding: 0 25px;
-   
-
-}
-.left_footer{
-   margin-top:50px;
-   margin-bottom: 82;
-   font-family: Roboto;
-font-style: normal;
-font-weight: 500;
-font-size: 21px;
-line-height: 25px;
-
-color: #FFFFFF;
-}
-.right_footer{
-    margin-top:56px;
-    margin-bottom: 55px;
-
-
-
-    
-}
-.footer_img{
-    width: 43.75px;
-    height: 40px;
-    margin-left:21.87px;
-
 }
 .menu_item{
     text-decoration:none;
